--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Youtube"
         tools:targetApi="31">
         <activity
-            android:name=".ui.detail.ContentActivity"
+            android:name=".ui.detail.DetailActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
