--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,10 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-scope:$koin_version"
     implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
+
+    //ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.5'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.5'
+    implementation 'com.google.android.exoplayer:extension-rtmp:2.18.5'
+    implementation 'com.google.android.exoplayer:extension-okhttp:2.18.5'
 }
